--- a/assets/style.css
+++ b/assets/style.css
@@ -1,39 +1,57 @@
 /* Styles for website */
 /* header styles */
+body {
+    background-color: rgb(244, 239, 211);
+    position:absolute; 
+    height:100%; 
+    width:100%;
+    margin: -19px 0 0 0;
+    width: 100%;
+}
+
+hr {
+    border: 10px solid green;
+    border-radius: 5px;
+}
+
 header {
-    z-index: 9999;
-    padding: 20px 35px;
-    background-image: url("./images/istockphoto-1317282043-170667a.jpeg");
+    
+    background-image: url("./images/wineandcheese.jpeg");
+    height: 300px;
     background-size: cover;
-    background-position: 80%;
+    background-position: 100%;
     background-attachment: fixed;
+    color: white;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     position: -webkit-sticky;
     position: sticky;
     top: 0;
+    text-align: center;
+    padding-top: 50px;
 }
   
 header h1 {
     font-weight: bold;
     margin: 0;
-    font-size: 36px;
+    font-size: 40px;
     color: black;
-    text-shadow: 0 0 10px white;
+    text-shadow: 0 0 20px white;
+    ;
 }
 
 header p {
     font-weight: bold;
     margin: 0;
-    font-size: 20px;
-    color: black;
-    text-shadow: 0 0 10px white;
+    font-size: 30px;
+    color: #000000;
+    text-shadow: 0 0 20px white;
 }
 
 header a {
     text-decoration: none;
-    color: black;
+    color: hwb(0 100% 0%);
 }
   
 header nav {
@@ -50,9 +68,10 @@ header nav ul {
   
 header nav ul li a {
     padding: 10px 15px;
-    font-weight: lighter;
+    font-weight: bold;
     font-size: 1.55vw;
-    text-shadow: 0 0 10px white;
+    text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+    
 }
   
 header nav ul li a:hover {
@@ -62,79 +81,71 @@ header nav ul li a:hover {
 }
 
 /*  hero styles */
-.hero {
-    background-image: url("./images/istockphoto-1317282043-170667a.jpeg");
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: 80%;
+
+
+.columns {
+    Width: 100%;
     display: flex;
+    justify-content: center;
+    flex-direction: row;
     flex-wrap: wrap;
-    align-items: flex-start;
-    padding: 20px 20px;
-}
-
-.city-map {
-    justify-content: left;
-    padding-left: 10px;
-    text-shadow: 0 0 10px white;
-}
-
-label {
-    font-weight: bold;
-    text-shadow: 0 0 10px white;
-    font-size:20px;
-}
-
-.hero form {
-    border: 3px solid green;
-    background-color: rgb(252, 225, 56, 0.8);
-    padding: 18px;
-    color: var(--secondary-color);
     width: 100%;
-    margin: 3.5%;
-    box-shadow: 0 0 10px white;
-    border-radius: 8px;
+    
     
 }
-
-.hero h1 {
-    font-weight: bold;
-    margin: 0;
-    font-size: 30px;
-    color: black;
-    text-shadow: 0 0 10px white;
-}
-
-/* property-details styles */
-#property-details {
-    background-color: lightyellow;
-    margin: 0;
-    padding: 18px;
-}
-
-#property-details h1 {
-    font-weight: bold;
-    font-size: 30px;
-    text-decoration-line: underline;
-    color: black;
-    text-shadow: 5px 5px 5px white;
-    text-align: center;
-}
-
     
-
-/* Media queries */
-@media only screen and (max-width: 992px) {
-    #search-city{
-        width:100%;
-    }
-    #search-button{
-        width:100%;
-    }
+.column {
+    width:100%;
+    flex: 50%;
+    margin-left: 10px; 
 }
-@media only screen and (max-width: 575px) {
 
-    #property{
-        justify-content: center;
-    }
+.columns h2 {
+    
+    font-weight: bold;
+    font-size: 1.55vw;
+}
+
+.columns hr {
+    border: 1px solid black;
+}
+
+footer {
+    margin: 20px 20px 20px 20px;
+} 
+
+
+
+
+/*video wrapper for available videos after search */
+
+.videoWrapper {
+	position: relative;
+	padding-bottom: 56.25%;
+	padding-top: 25px;
+	height: 0;
+}
+
+.videoWrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+/*media queries*/
+
+@media (min-width: 48em) {
+      
+.column {
+    width: 50%;
+    float:left;
+}
+      
+.columns {
+    content: "";
+    display: table;
+    clear: both;
+}
 }
