--- a/assets/style.css
+++ b/assets/style.css
@@ -2,11 +2,9 @@
 /* header styles */
 body {
     background-color: rgb(244, 239, 211);
-    position:absolute; 
-    height:100%; 
-    width:100%;
-    margin: -19px 0 0 0;
-    width: 100%;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
 }
 
 hr {
@@ -16,7 +14,7 @@ hr {
 
 header {
     
-    background-image: url("./images/wineandcheese.jpeg");
+    background-image: url("./assets/images/wineandcheese.jpeg");
     height: 300px;
     background-size: cover;
     background-position: 100%;
@@ -111,8 +109,17 @@ header nav ul li a:hover {
 }
 
 footer {
-    margin: 20px 20px 20px 20px;
+    position: absolute;
+    bottom: 0;
+    padding: 0;
+    width: 100%;
 } 
+
+.bulma-control-mixin {
+    @include control;
+    background: rgba(91, 1, 49, 0.952);
+    color: white;
+  }
 
 
 
