--- a/assets/style.css
+++ b/assets/style.css
@@ -1,12 +1,10 @@
-/* Styles for website /
-/ header styles */
+/* Styles for website */
+/* header styles */
 body {
     background-color: rgb(244, 239, 211);
-    position:absolute; 
-    height:100%; 
-    width:100%;
-    margin: -19px 0 0 0;
-    width: 100%;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
 }
 
 hr {
@@ -15,8 +13,8 @@ hr {
 }
 
 header {
-
-    background-image: url("./images/wineandcheese.jpeg");
+    
+    background-image: url("./assets/images/wineandcheese.jpeg");
     height: 300px;
     background-size: cover;
     background-position: 100%;
@@ -31,7 +29,7 @@ header {
     text-align: center;
     padding-top: 50px;
 }
-
+  
 header h1 {
     font-weight: bold;
     margin: 0;
@@ -53,28 +51,27 @@ header a {
     text-decoration: none;
     color: hwb(0 100% 0%);
 }
-
+  
 header nav {
     margin: 7px 0;
 }
-
+  
 header nav ul {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     list-style: none;
-    padding: 0 60px 0 60px;
 }
-
+  
 header nav ul li a {
     padding: 10px 15px;
     font-weight: bold;
     font-size: 1.55vw;
     text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
-
+    
 }
-
+  
 header nav ul li a:hover {
     background: white;
     border-radius: 5px;
@@ -83,6 +80,7 @@ header nav ul li a:hover {
 
 /*  hero styles */
 
+
 .columns {
     Width: 100%;
     display: flex;
@@ -90,25 +88,20 @@ header nav ul li a:hover {
     flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
-
-
+    
+    
 }
-
+    
 .column {
-    /*added some styles to center text*/
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     width:100%;
     flex: 50%;
     margin-left: 10px; 
 }
 
 .columns h2 {
-
+    
     font-weight: bold;
     font-size: 1.55vw;
-    text-align: center;
 }
 
 .columns hr {
@@ -116,39 +109,47 @@ header nav ul li a:hover {
 }
 
 footer {
-    margin: 20px 20px 20px 20px;
+    position: absolute;
+    bottom: 0;
+    padding: 0;
+    width: 100%;
 } 
 
-/*video wrapper for available videos after search*/
+.bulma-control-mixin {
+    @include control;
+    background: rgba(91, 1, 49, 0.952);
+    color: white;
+  }
+
+
+
+
+/*video wrapper for available videos after search */
 
 .videoWrapper {
-    position: relative;
-    padding-bottom: 56.25%;
-    padding-top: 25px;
-    height: 0;
+	position: relative;
+	padding-bottom: 56.25%;
+	padding-top: 25px;
+	height: 0;
 }
 
 .videoWrapper iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-
-.hidden {
-    display: none;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
 
 /*media queries*/
 
 @media (min-width: 48em) {
-
+      
 .column {
     width: 50%;
     float:left;
 }
-
+      
 .columns {
     content: "";
     display: table;
