--- a/assets/style.css
+++ b/assets/style.css
@@ -14,7 +14,7 @@ hr {
 
 header {
     
-    background-image: url("./assets/images/wineandcheese.jpeg");
+    background-image: url("./images/wineandcheese.jpeg");
     height: 300px;
     background-size: cover;
     background-position: 100%;
@@ -109,7 +109,7 @@ header nav ul li a:hover {
 }
 
 footer {
-    position: absolute;
+    position: float;
     bottom: 0;
     padding: 0;
     width: 100%;
@@ -156,3 +156,4 @@ footer {
     clear: both;
 }
 }
+
