--- a/assets/style.css
+++ b/assets/style.css
@@ -109,7 +109,7 @@ header nav ul li a:hover {
 }
 
 footer {
-    position: absolute;
+    position: relative;
     bottom: 0;
     padding: 0;
     width: 100%;
