--- a/assets/style.css
+++ b/assets/style.css
@@ -14,7 +14,7 @@ hr {
 
 header {
     
-    background-image: url("./assets/images/wineandcheese.jpeg");
+    background-image: url("./images/wineandcheese.jpeg");
     height: 300px;
     background-size: cover;
     background-position: 100%;
