--- a/assets/style.css
+++ b/assets/style.css
@@ -14,7 +14,7 @@ hr {
 
 header {
     
-    background-image: url("./images/wineandcheese.jpeg");
+    background-image: url("/assets/images/wineandcheese.jpeg");
     height: 300px;
     background-size: cover;
     background-position: 100%;
@@ -23,8 +23,8 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    position: -webkit-sticky;
-    position: sticky;
+    position: float;
+    position: float;
     top: 0;
     text-align: center;
     padding-top: 50px;
@@ -109,7 +109,8 @@ header nav ul li a:hover {
 }
 
 footer {
-    position: relative;
+	background-image: url("/assets/images/map2.jpg");
+    position: float;
     bottom: 0;
     padding: 0;
     width: 100%;
